welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:11: error: not found: value Maths
  } else if (Maths.abs(z)<=5) {
             ^